(chores) camel-core-reifier: use unmodifiable list when possible